add skater to get in touch

--- a/index.html
+++ b/index.html
@@ -329,7 +329,7 @@
 								<li><strong>Instagram:</strong> @younggunsskateschool</li>
 							</ul>
 						</div>
-						</div>
+						<div class="skater"><img src="images/skater2.png"/></div>
 					</div>
 				</section>
 
