--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="x-ua-compatible" content="ie=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Foundation for Sites</title>
+	<title>Young Guns Skate School</title>
 	<link rel="stylesheet" href="css/app.css">
 </head>
 <body>
@@ -34,8 +34,8 @@
 						<img src="images/header-skater.png" class="header-skater"/>
 						<div class="menu-bar">
 							<a type="" class="hamburger hide-for-large" data-toggle="offCanvas"><img src="images/hamburger.png"/></a>
-							<img class="menu-logo hide-for-large" src="images/logo-blue.png"/>
-							<img class="menu-logo show-for-large" src="images/logo.png"/>
+							<img class="menu-logo hide-for-large" src="images/logo-blue.png" alt="Young Guns Skate School"/>
+							<img class="menu-logo show-for-large" src="images/logo.png" alt="Young Guns Skate School"/>
 							<ul class="menu-items show-for-large" data-magellan data-options="animationEasing:swing; animationDuration:400">
 								<li><a href="#after-school">After School</a></li>
 								<li><a href="#holiday-programmes">Holiday Programmes</a></li>
@@ -102,7 +102,7 @@
 							</article>
 						</div>
 						<div class="columns medium-6 large-3">
-							<article class="after-school-cta" data-equalizer-watch="schools">
+							<article class="after-school-cta" data-equalizer-watch="schools" data-magellan data-options="animationEasing:swing; animationDuration:400">
 								<h4>Keen to get your school involved?</h4>
 								<p class="xsmall">
 									We’re always on the lookout for new schools to join our great program. Please get in touch if you’re interested in getting your school involved.
@@ -111,7 +111,7 @@
 							</article>
 						</div>
 					</div>
-					<div class="row">
+					<div class="row bringtofront">
 						<div class="columns large-12 footnote" data-magellan data-options="animationEasing:swing; animationDuration:400">
 							<p>Skateboarding doesn’t have to be after school! You can also skate during your lunch break. <strong><a href="#get-in-touch" data-close class="enquire">Get in touch</a></strong> for more details.</p>
 						</div>
@@ -203,7 +203,7 @@
 							</article> -->
 						</div>
 						<div class="columns small-12 large-3 skateboard">
-							<img src="images/skateboard.png"/>
+							<img src="images/skateboard.png" alt="Young Guns Skate School Skateboard"/>
 						</div>
 					</div>
 					<img class="stripe stripe-l-news" src="images/stripe-l-news.png">
@@ -324,9 +324,10 @@
 						<!-- <div class="columns medium-6 large-7 contact-details"> -->
 						<div class="columns small-12 contact-details">
 							<ul>
-								<li><strong>Phone:</strong> 027 659 2707</li>
-								<li><strong>Facebook:</strong> https://www.facebook.com/Young-Guns-Skate-School</li>
-								<li><strong>Instagram:</strong> @younggunsskateschool</li>
+								<li><strong>Email:</strong> <a href="mailto:simon@younggunsskateschool.co.nz">simon@younggunsskateschool.co.nz</a></li>
+								<li><strong>Phone:</strong> <a href="tel:+64276592707">+64 (0) 27 659 2707</a></li>
+								<li><strong>Facebook:</strong> <a href="https://www.facebook.com/Young-Guns-Skate-School" target="_blank">https://www.facebook.com/Young-Guns-Skate-School</a></li>
+								<li><strong>Instagram:</strong> <a href="https://www.instagram.com/younggunsskateschool/" target="_blank">@younggunsskateschool</a></li>
 							</ul>
 						</div>
 						<div class="skater"><img src="images/skater2.png"/></div>
@@ -337,10 +338,10 @@
 
 				<footer class="footer">
 					<ul class="menu" data-magellan data-options="animationEasing:swing; animationDuration:400">
-						<li class="logo hide-for-large"><a href="#header"><img src="images/logo.png"/></a></li>
+						<li class="logo hide-for-large"><a href="#header"><img src="images/logo.png" alt="Young Guns Skate School"/></a></li>
 						<li><a href="#after-school">After School</a></li>
 						<li><a href="#holiday-programmes" class="remove-border">Holiday Programmes</a></li>
-						<li class="logo show-for-large"><a href="#header"><img src="images/logo.png"/><div class="back-to-top">Back to top</div></a></li>
+						<li class="logo show-for-large"><a href="#header"><img src="images/logo.png" alt="Young Guns Skate School"/><div class="back-to-top">Back to top</div></a></li>
 						<li><a href="#news-events">News &amp; Events</a></li>
 						<li><a href="#get-in-touch" class="clear-border">Get in touch</a></li>
 					</ul>
@@ -354,5 +355,14 @@
 	<script src="bower_components/what-input/what-input.js"></script>
 	<script src="bower_components/foundation-sites/dist/foundation.js"></script>
 	<script src="js/app.js"></script>
+	<script>
+	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+	  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+	  ga('create', 'UA-82395092-1', 'auto');
+	  ga('send', 'pageview');
+	</script>
 </body>
 </html>
